# AccSim

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  HANDOFF.md  README.md  pyproject.toml  start_web.py
accsim/: __init__.py  config.py
accsim/analysis/: comparison.py  metrics.py  roofline.py  visualizer.py
accsim/compiler/: __init__.py  exporter.py  instruction.py  lstm_compiler.py  scheduler.py  tiler.py
accsim/core/: __init__.py  clock.py  controller.py  datatypes.py  memory.py  pe.py  systolic_array.py
accsim/models/: __init__.py  lstm.py  solarx_bridge.py
accsim/web/: __init__.py  app.py  korean.py  simulator_api.py
accsim/web/frontend/: .env.production  next.config.mjs  package-lock.json  package.json  tailwind.config.ts  tsconfig.tsbuildinfo
accsim/web/frontend/messages/: en.json  ko.json
accsim/web/frontend/scripts/: generate-favicons.py
accsim/web/frontend/src/: i18n.ts
accsim/web/frontend/src/app/: globals.css  layout.tsx  page.tsx
accsim/web/frontend/src/app/[locale]/: layout.tsx  page.tsx
accsim/web/frontend/src/components/d3/: CycleBreakdown.tsx  PEHeatmap.tsx  RooflineChart.tsx
accsim/web/frontend/src/hooks/: useLevelText.ts  useScrollProgress.ts  useSimulator.ts
accsim/web/frontend/src/lib/: api.ts  glossary.ts  hallSequence.ts  types.ts
accsim/web/frontend/src/stores/: useKnowledgeLevel.ts  useSectionStore.ts
accsim/web/static/: index.html
examples/: demo_lstm_inference.py  demo_matmul.py  demo_solarx.py
tests/: test_controller.py  test_lstm.py  test_memory.py  test_pe.py  test_systolic_array.py  test_tiler.py
(+38 files in other folders)
