[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "accsim"
version = "0.1.0"
description = "AI Accelerator Simulator - Systolic Array based matrix operation accelerator with cycle-accurate simulation"
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.24",
    "matplotlib>=3.7",
]

[project.optional-dependencies]
torch = ["torch>=2.0"]
dev = ["pytest>=7.0", "pytest-cov"]
web = ["fastapi>=0.100", "uvicorn[standard]>=0.20"]

[project.scripts]
accsim-web = "start_web:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
